<resources>
    <string name="app_name">Cookbook</string>
    <string name="welcome_msg">Welcome to Chomp!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_cta">Call to action</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_profile">Profile</string>
    <string name="user_cookbooks">Cookbooks</string>
    <string name="user_liked_recipes">Liked Recipes</string>

    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_cookbooks">Cookbooks</string>
    <string name="menu_liked_recipes">Liked Recipes</string>

    <string name="title_placeholder">Title</string>
    <string name="news_placeholder">News</string>
    <string name="recipe_info_placeholder">Here is some news</string>
    <string name="LoremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="tv_take_photo">Take photo</string>
    <string name="tv_description">Select a preset image or take a new photo</string>
    <string name="save"> Save</string>
    <string name="next"> Next</string>
    <string name="capture_text">Capture or choose and image from gallery to get recipe</string>
    <string name="done">done</string>


    <string-array name="recipe_titles">
        <item>Baseball</item>
        <item>Badminton</item>
        <item>Basketball</item>
        <item>Bowling</item>
        <item>Cycling</item>
        <item>Golf</item>
        <item>Running</item>
        <item>Soccer</item>
        <item>Swimming</item>
        <item>Table Tennis</item>
        <item>Tennis</item>
    </string-array>

    <array name="recipe_images">
        <item>@drawable/logo</item>
        <item>@drawable/logo</item>
        <item>@drawable/logo</item>
        <item>@drawable/logo</item>
        <item>@drawable/logo</item>
        <item>@drawable/logo</item>
        <item>@drawable/logo</item>
        <item>@drawable/logo</item>
        <item>@drawable/logo</item>
        <item>@drawable/logo</item>
        <item>@drawable/logo</item>
    </array>

    <string-array name="recipe_info">
        <item>Here is some Baseball news!</item>
        <item>Here is some Badminton news!</item>
        <item>Here is some Basketball news!</item>
        <item>Here is some Bowling news!</item>
        <item>Here is some Cycling news!</item>
        <item>Here is some Golf news!</item>
        <item>Here is some Running news!</item>
        <item>Here is some Soccer news!</item>
        <item>Here is some Swimming news!</item>
        <item>Here is some Table Tennis news!</item>
        <item>Here is some Tennis news!</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>