<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    android:theme="@style/MainDrawerTheme">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/menu_home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/account_circle_icon"
            android:title="@string/user_profile" />
        <item
            android:id="@+id/nav_cookbooks"
            android:icon="@drawable/menu_book_icon"
            android:title="@string/user_cookbooks" />
        <item
            android:id="@+id/nav_liked_recipes"
            android:icon="@drawable/favorite_icon"
            android:title="@string/user_liked_recipes" />

    </group>
</menu>