<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.cookbook.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.cookbook.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_cookbooks"
        android:name="com.example.cookbook.ui.cookbooks.CookbooksFragment"
        android:label="@string/menu_cookbooks"
        tools:layout="@layout/fragment_cookbooks" />

    <fragment
        android:id="@+id/nav_liked_recipes"
        android:name="com.example.cookbook.ui.likedrecipes.LikedRecipesFragment"
        android:label="@string/menu_liked_recipes"
        tools:layout="@layout/fragment_liked_recipes" />
</navigation>