<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/recipeImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/title_placeholder"
        android:padding="8dp"
        android:layout_alignBottom="@id/recipeImage"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        style="@style/TextAppearance.AppCompat.Headline"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/newsTitle"
        android:text="@string/news_placeholder"
        android:padding="8dp"
        android:layout_below="@id/recipeImage"
        android:textColor="?android:textColorSecondary"
        style="@style/TextAppearance.AppCompat.Subhead" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/subTitle"
        android:text="@string/recipe_info_placeholder"
        android:padding="8dp"
        android:layout_below="@id/newsTitle"
        style="@style/TextAppearance.AppCompat.Subhead" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>